@@ -1,4 +1,7 @@
 2001-10-27  Nat Friedman  <nat@ximian.com>
 
+	* e-messenger-identity.c (e_messenger_identity_create_string): New
+	function for Joey.
+	
 	* e-messenger-listener.h: Made these paths less relative.
 
